@startuml p06-account-hierarchy
scale 2
!include _common.iuml
hide circle
hide empty members
left to right direction

class Account {
  - accountNumber : String
  - owner : Customer
  - balance : double
  --
  + deposit(amount : double) : boolean
  + withdraw(amount : double) : boolean
  + printInfo() : void
}

class SavingsAccount {
  - interestRate : double
  --
  + printAccountType() : void
}

class CheckingAccount {
  - overdraftLimit : double
  --
  + printAccountType() : void
}

Account <|-- SavingsAccount
Account <|-- CheckingAccount
@enduml
